examples/bad/ERROR_UNEXPECTED_DATA_FOR_NULLARY_LABEL/simple.st
language core;

extend with #structural-patterns, #natural-literals, #variants, #nullary-variant-labels;

fn main(n : Nat) -> <| a : Nat, b, c |> {
  return <| b = true |>
}
//ERROR_UNEXPECTED_DATA_FOR_NULLARY_LABEL
